<resources>
    <!-- General strings -->
    <string name="app_name">Personal Diary</string>

    <!-- LoginActivity -->
    <string name="welcome_text">Welcome Back!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="create_account_button">Create Account</string>
    <string name="already_have_account_text">Already have an account?</string>
    <string name="login_button_text">Login</string>
    <string name="sign_up_button_text">Sign Up</string>

    <!-- CreateAccountActivity -->
    <string name="subtitle_text">Sign up your story here..!</string>

    <!-- MainActivity -->
    <string name="page_title">Your Notes</string>
    <string name="search_hint">Search notes...</string>
    <string name="logout">Logout</string>

    <!-- Note details -->
    <string name="note_title">DATE/MONTH/YEAR</string>
    <string name="note_content">This can be diary content that can be long</string>
    <string name="note_timestamp">Diary title</string>

    <!-- Note actions -->
    <string name="delete_note">Delete note</string>
    <string name="add_note">Add New Day</string>
    <string name="save_note">Save</string>
    <string name="share_note">Share</string>

    <!-- NoteDetailsActivity -->
    <string name="select_date_hint">Select Date</string>
    <string name="start_your_day_hint">Start your Day...</string>
    <string name="add_media">Add Media</string>
</resources>
